# trendcart_backend

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: deploy.yml
migrations/: 20260706000001_create_creators.sql  20260706000002_create_products.sql  20260706000003_create_merchant_links.sql  20260706000004_create_product_variants.sql  20260706000005_create_redirect_events.sql  20260706000006_convert_enums_to_varchar.sql  20260706000007_price_to_double.sql  20260706000008_add_oauth_id_to_creators.sql  20260706000009_create_scrape_tables.sql  20260706000010_add_unique_to_click_id.sql  20260706000011_create_conversions_table.sql  20260706000012_add_unique_click_id_to_conversions.sql  20260710000001_add_performance_indexes.sql
scripts/: check_orphaned_data.sql
src/: cache.rs  db.rs  error.rs  jwt.rs  lib.rs  main.rs  state.rs
src/middleware/: auth.rs
src/models/: conversion.rs  creator.rs  merchant_link.rs  mod.rs  product.rs  product_variant.rs  scrape_job.rs  scrape_result.rs  scrape_source.rs
src/routes/: admin_conversions.rs  admin_merchant_links.rs  admin_products.rs  admin_scrape.rs  auth.rs  common.rs  health.rs  mod.rs  redirect.rs  store_products.rs  upload.rs
src/scraper/: mod.rs  registry.rs
src/services/: product.rs
src/worker/: mod.rs
tests/: auth_test.rs  conversions_test.rs  db_test.rs  merchant_links_test.rs  products_test.rs  redirect_test.rs
tests/common/: mod.rs
