[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
futures-util = "0.3"
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "limit"] }
tower = "0.5"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
image = "0.25"
webp = "0.3"
mime = "0.3"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
fred = "10"
